--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Free Lancer</title>
+    <link rel="preload" href="assets/css/normalize.css" as="style">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="assets/css/style.css" as="style">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <header>
-        <h1>Alex Pérez Freelancer</h1>
+        <h1 class="title">Alex Pérez Freelancer</h1>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="nav-prin contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
     <section>
-        <h2>Diseño y Desarrollo Web Freelancer</h2>
+        <h2 class="title">Diseño y Desarrollo Web Freelancer</h2>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <circle cx="12" cy="11" r="3" />
@@ -30,7 +38,7 @@
     </section>
 
     <main>
-        <h2>Mis Servicios</h2>
+        <h2 class="title">Mis Servicios</h2>
 
         <section>
             <h3>Diseño Web</h3>
