--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </form>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados. Freelancer</p>
     </footer>
 </body>
